--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ReOpenDoors</string>
     <string name="login_text">LOGIN</string>
+    <string name="LOGIN_PASS">111111</string>
 </resources>
