--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ReOpenDoors</string>
     <string name="login_text">LOGIN</string>
     <string name="LOGIN_PASS">111111</string>
+    <string name="error_login">INCORRECT CREDENTIALS. \nACCES DENIED</string>
 </resources>
