--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="login_text">LOGIN</string>
     <string name="LOGIN_PASS">111111</string>
     <string name="error_login">CREDENCIALES INCORRECTAS. \nACCESO DENEGADO.</string>
+    <string name="Door_ID">ID puerta: </string>
+    <string name="Pass_door_ID">Nueva contraseña: </string>
 </resources>
