--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -3,8 +3,11 @@
     <string name="login_text">LOGIN</string>
     <string name="LOGIN_PASS">111111</string>
     <string name="error_login">INCORRECT CREDENTIALS. \nACCES DENIED</string>
-    <string name="door_ID_1">Puerta 1: </string>
-    <string name="door_ID_2">Puerta 2: </string>
+    <string name="door_ID_1">Door 1: </string>
+    <string name="door_ID_2">Door 2: </string>
     <string name="ok_admin">Acept</string>
     <string name="cancel_admin">Cancel</string>
+    <string name="startGame">Release T-Virus</string>
+    <string name="releasingVirus">Releasing T-Virus...</string>
+    <string name="securityIncomplet">Incomplet security.\nPlease check all doors.</string>
 </resources>
