gridlayout done, it rest check password and iterate from door one to two

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,7 @@
     <string name="startGame">Release T-Virus</string>
     <string name="releasingVirus">Releasing T-Virus...</string>
     <string name="securityIncomplet">Incomplet security.\nPlease check all doors.</string>
+    <string name="gridText">_</string>
+    <string name="tvScreenPassHint">Enter password</string>
+    <string name="umbrellaCorp">Umbrella Corp.\nSpreading T-Virus\n...</string>
 </resources>
