--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,8 +9,11 @@
     <string name="cancel_admin">Cancel</string>
     <string name="startGame">Release T-Virus</string>
     <string name="releasingVirus">Releasing T-Virus...</string>
-    <string name="securityIncomplet">Incomplet security.\nPlease check all doors.</string>
+    <string name="securityIncomplet">Incomplet security.\nPlease check the password.</string>
     <string name="gridText">_</string>
     <string name="tvScreenPassHint">Enter password</string>
     <string name="umbrellaCorp">Umbrella Corp.\nSpreading T-Virus\n...</string>
+
+    <string name="escape_room">ESCAPE ROOM</string>
+    <string name="juego_2_name">JUEGO_2_NAME</string>
 </resources>
