--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,11 @@
     <string name="cancel_admin">Cancelar</string>
     <string name="startGame">Liberar T-Virus</string>
     <string name="releasingVirus">Liberando T-Virus...</string>
-    <string name="securityIncomplet">Seguridad incompleta.\nCompruebe todas las puertas.</string>
+    <string name="securityIncomplet">Seguridad incompleta.\nCompruebe la contraseña.</string>
     <string name="gridText">_</string>
     <string name="tvScreenPassHint">Introduzca password</string>
     <string name="umbrellaCorp">Umbrella Corp.\nPropagando T-Virus\n...</string>
+
+    <string name="escape_room">ESCAPE ROOM</string>
+    <string name="juego_2_name">JUEGO_2_NAME</string>
 </resources>
