selector for buttons added.Remains in gridview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
     <string name="upperMessage">Puerta bloqueada.\nAccesibilidad limitada.</string>
     <string name="spreadingIn">Liberando T-Virus en : %1$s</string>
 
-    <string name="escape_room">ESCAPE ROOM</string>
-    <string name="juego_2_name">JUEGO_2_NAME</string>
+    <string name="escape_room">Asesinato en La Guarida del Oso</string>
+    <string name="juego_2_name">Escape en las montañas</string>
     
     <string name="mansion_destroyed">¡LO CONSEGUISTEIS!\nLOS U3CM HABEIS DESTRUIDO LA MANSION.</string>
     <string name="infectados">Estais infectados.</string>
