riddle filled. Ready to be customize

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,5 @@
     <string name="password_wrong">Contraseña Incorrecta</string>
     <string name="door_opened">La puerta está abierta!</string>
 
-    <string name="riddle_popup">AAABBBBCCCDDDD</string>
+    <string name="riddle_popup">1, 1, 2, 4, 8, 16, 23, XX\n\n 6, 15, 35, 77, 143, XXX\n\n1, 1, 2, 6, 24, 120, XXX</string>
 </resources>
